--- a/pages/admin/components/inspections.html
+++ b/pages/admin/components/inspections.html
@@ -117,13 +117,13 @@
    </div>
   </section>
   <div class="mt-3">
-   <section class="card">
+   <section class="card mt-3">
     <div class="card-body">
-     <h4>Filter & Search</h4>
+     <h4 class="mb-4">Filter & Search</h4>
      <div class="filters">
       <form id="filters-form">
-       <div class="row g-2 align-items-end">
-        <div class="col-auto">
+       <div class="row g-3 align-items-end">
+        <div class="col-md-4">
          <label for="business-name" class="form-label h6">Business Name</label>
          <input
           type="text"
@@ -132,13 +132,13 @@
           placeholder="Enter business name"
          />
         </div>
-        <div class="col-auto">
+        <div class="col-md-4">
          <label for="inspection-date" class="form-label h6"
           >Inspection Date</label
          >
          <input type="date" id="inspection-date" class="form-control h6" />
         </div>
-        <div class="col-auto">
+        <div class="col-md-4">
          <label for="violation" class="form-label h6">Violation</label>
          <select id="violation" class="form-select h6">
           <option value="">Select</option>
@@ -146,23 +146,32 @@
           <option value="no">No</option>
          </select>
         </div>
-        <div class="col-auto">
+        <div class="col-md-4">
          <label for="inspector" class="form-label h6">Inspector</label>
          <select id="inspector" class="form-select h6">
           <!-- Inspector options dynamically added here -->
          </select>
         </div>
-        <div class="col-auto">
+        <div class="col-md-4">
          <label for="sort-order" class="form-label h6">Sort by Date</label>
          <select id="sort-order" class="form-select h6">
           <option value="latest">Latest to Oldest</option>
           <option value="oldest">Oldest to Latest</option>
          </select>
         </div>
+        <div class="col-md-4">
+         <label for="receipt-no" class="form-label h6">Receipt No:</label>
+         <input
+          type="text"
+          class="form-control h6"
+          id="receipt-no"
+          placeholder="Search by violation receipt no..."
+         />
+        </div>
        </div>
       </form>
      </div>
-     <h4>Inspected Businesses</h4>
+     <h4 class="mt-4">Inspected Businesses</h4>
      <table class="table table-hover">
       <thead>
        <tr>
